welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:6: error: ';' expected but 'else' found.
  else{return false
  ^parotTrouble:10: error: Unmatched closing brace '}' ignored here
 }
 ^